# au_diss

./: .gitignore  .renvignore  1-intro.qmd  11-titlepage.qmd  11-titlepage.tex  12-abstract.qmd  12-abstract.tex  13-acknowledgements.qmd  13-acknowledgements.tex  14-acronyms.qmd  2-lit_review.qmd  21-intro.qmd  22-lit_review.qmd  23-prob_statement.qmd  24-methods.qmd  25-analysis.qmd  25-results.qmd  25-test.qmd  25a-h1a.qmd  25b-h1b.qmd  25c-h1c.qmd  25d-h2.qmd  25d-h3.qmd  26-conclusions.qmd  27-colophon.qmd  27-references.qmd  28-references.qmd  31a-irb.qmd  32-b-contributions.qmd  32-contributions.qmd  33-conduct.qmd  33c-s1conduct.qmd  34d-s2conduct.qmd  36f-videoproc.qmd  37-datadict.qmd  37g-datadict.qmd  38h-dataorg.qmd  4-methods.qmd  README.md  _environment  (+21 more)
_apps/: 31a-irb.qmd  32b-contributions.qmd  35e-videotools.qmd  38h-dataorg.qmd  39i-changelog.qmd  39i-v1-1-changelog.qmd
_chaps/: 21-intro.qmd  22-lit_review.qmd  23-prob_statement.qmd  24-methods.qmd  25-analysis.qmd  25-results.qmd  25-tlx.qmd  25a-h1a.qmd  25b-h1b.qmd  25c-h1c.qmd  25d-h2.qmd  25d-h3.qmd  26-conclusions.qmd  27-colophon.qmd
_front/: 11-titlepage.qmd  12-abstract.qmd  13-acknowledgements-html.qmd  13-acknowledgements.qmd
archive/: 25-h1b-nonlinear.qmd  25-linear-pw.qmd  25-m7r.qmd  README.md  chat.md  h1b_mod_select.qmd
css/: custom.css
data/: AURecruit.xlsx  DataDictionary.docx  combined_results.xlsx
defended-2024-08-02/: README.md
docs/: artifacts.md  baseline-plan.md  build.md  conclusions-delta.md  data.md  dissertation-v111-review-addendum.md  intel-renv-manifest.md  (+14 more)
(+392 files in other folders)
