[project]
name = "dissertation-parse-xml"
version = "0.1.0"
description = "Python extraction utilities for dissertation XML/report processing"
requires-python = ">=3.11,<3.15"
dependencies = [
  "click==8.1.7",
  "et-xmlfile==1.1.0",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "numpy==1.26.4",
  "openpyxl==3.1.2",
  "packaging==24.0",
  "pandas==2.2.2",
  "Pygments==2.17.2",
  "pylightxl==1.61",
  "python-dateutil==2.9.0.post0",
  "pytz==2024.1",
  "rich==13.7.1",
  "shellingham==1.5.4",
  "six==1.16.0",
  "typer==0.12.3",
  "typing_extensions==4.11.0",
  "tzdata==2024.1",
]

[dependency-groups]
dev = [
  "isort==5.13.2",
  "pip-review==1.3.0",
]

[tool.uv]
package = false
